# main.go
@@ -2,24 +2,39 @@ package main
 
 import (
 	"nft-portal/model"
+	"os"
 
 	opensea "github.com/DevilsTear/opensea-go-api"
+	// _ "github.com/Devilstear/nft-portal/docs"
+	"github.com/iris-contrib/swagger/swaggerFiles"
+	"github.com/iris-contrib/swagger/v12"
 	"github.com/kataras/iris/v12"
+	"github.com/kataras/iris/v12/middleware/accesslog"
 )
 
 func main() {
-	app := iris.New()
+	ac := makeAccessLog()
+	defer ac.Close() // Close the underline file.
 
-	booksAPI := app.Party("/openseaapi")
+	app := iris.Default()
+
+	apiV1 := app.Party("/openseaapi")
 	{
-		booksAPI.Use(iris.Compression)
+		// apiV1.Use(iris.Compression)
 
 		// GET: http://localhost:8080/opensea
-		booksAPI.Get("/listAssets/{walletAddress}", listAssets)
+		apiV1.Get("/listAssets/{walletAddress}", listAssets)
 		// // POST: http://localhost:8080/books
-		// booksAPI.Post("/", create)
-	}
+		// apiV1.Post("/", create)
 
+	}
+	config := swagger.Config{
+		URL:         "http://localhost:8080/swagger/doc.json",
+		DeepLinking: true,
+	}
+	swaggerUI := swagger.CustomWrapHandler(&config, swaggerFiles.Handler)
+	app.Get("/swagger", swaggerUI)
+	app.Get("/swagger/{any:path}", swaggerUI)
 	app.Listen(":8080")
 }
 
@@ -33,28 +48,45 @@ func main() {
 // @Param   x-wallet  		header  string     	false        "Wallet Address"
 // @Param   offset     		query  	int     	true        "Offset"
 // @Param   limit      		query  	int     	true        "Limit"
-// @Success 200 {object} model.APIError	"status = true, Code = 200"
-// @Failure 400 {object} model.APIError "status = true, Code = 400, Message = Provide a valid walletAddress"
+// @Success 200 {object} model.Result	"status = true, Code = 200"
+// @Failure 400 {object} model.Result "status = true, Code = 400, Message = Provide a valid walletAddress"
 // @Router /listAssets/{walletAddress} [get]
 func listAssets(ctx iris.Context) {
 	walletAddress := ctx.Params().Get("walletAddress")
-	// offset := ctx.Params().Get("offset")
-	// limit := strconv.Atoi(ctx.qet().Get("limit"))
+	offset, err := ctx.URLParamInt("offset")
+	if err != nil || offset < 0 {
+		offset = 1
+	}
+	limit, err := ctx.URLParamInt("limit")
+	if err != nil || limit < 0 {
+		limit = 20
+	}
 
 	if walletAddress == "" {
 		walletAddress = ctx.GetHeader("x-wallet")
 	}
 
-	_, err := opensea.ParseAddress(walletAddress)
+	response := model.Result{
+		Paging: model.Paging{
+			Offset: offset,
+			Limit:  limit,
+		},
+		APIStatus: model.APIStatus{
+			Status:  true,
+			Code:    200,
+			Message: "Success",
+		},
+	}
+
+	_, err = opensea.ParseAddress(walletAddress)
 	if err != nil {
 		// ctx.StopWithError(iris.StatusBadRequest, err)
-		ctx.JSON(model.Result{
-			APIStatus: model.APIStatus{
-				Status:  true,
-				Code:    400,
-				Message: err.Error(),
-			},
-		})
+		response.APIStatus = model.APIStatus{
+			Status:  true,
+			Code:    400,
+			Message: err.Error(),
+		}
+		ctx.JSON(response)
 		return
 	}
 
@@ -63,28 +95,63 @@ func listAssets(ctx iris.Context) {
 	openseaAPI, err := opensea.NewOpenseaRinkeby(walletAddress)
 	if err != nil {
 		// ctx.StopWithError(iris.StatusBadRequest, err)
-		ctx.JSON(model.Result{
-			APIStatus: model.APIStatus{
-				Status:  true,
-				Code:    400,
-				Message: err.Error(),
-			},
-		})
+		response.APIStatus = model.APIStatus{
+			Status:  true,
+			Code:    400,
+			Message: err.Error(),
+		}
+		ctx.JSON(response)
 		return
 	}
 
 	assets, err := openseaAPI.GetAssets(params)
 	if err != nil {
 		// ctx.StopWithError(iris.StatusBadRequest, err)
-		ctx.JSON(model.Result{
-			APIStatus: model.APIStatus{
-				Status:  true,
-				Code:    400,
-				Message: err.Error(),
-			},
-		})
+		response.APIStatus = model.APIStatus{
+			Status:  true,
+			Code:    400,
+			Message: err.Error(),
+		}
+		ctx.JSON(response)
 		return
 	}
 
-	ctx.JSON(assets)
+	response.Data = assets
+
+	ctx.JSON(response)
+}
+
+func makeAccessLog() *accesslog.AccessLog {
+	// Initialize a new access log middleware.
+	ac := accesslog.File("./access.log")
+	// Remove this line to disable logging to console:
+	ac.AddOutput(os.Stdout)
+
+	// The default configuration:
+	ac.Delim = '|'
+	ac.TimeFormat = "2006-01-02 15:04:05"
+	ac.Async = false
+	ac.IP = true
+	ac.BytesReceivedBody = true
+	ac.BytesSentBody = true
+	ac.BytesReceived = false
+	ac.BytesSent = false
+	ac.BodyMinify = true
+	ac.RequestBody = true
+	ac.ResponseBody = false
+	ac.KeepMultiLineError = true
+	ac.PanicLog = accesslog.LogHandler
+
+	// Default line format if formatter is missing:
+	// Time|Latency|Code|Method|Path|IP|Path Params Query Fields|Bytes Received|Bytes Sent|Request|Response|
+	//
+	// Set Custom Formatter:
+	ac.SetFormatter(&accesslog.JSON{
+		Indent:    "  ",
+		HumanTime: true,
+	})
+	// ac.SetFormatter(&accesslog.CSV{})
+	// ac.SetFormatter(&accesslog.Template{Text: "{{.Code}}"})
+
+	return ac
 }
