# model/model.go
@@ -2,21 +2,21 @@ package model
 
 // APIStatus
 type APIStatus struct {
-	Status  bool
-	Code    int
-	Message string
+	Status  bool   `json:"status" bson:"status"`
+	Code    int    `json:"code" bson:"code"`
+	Message string `json:"message" bson:"message"`
 }
 
 // Paging
 type Paging struct {
-	Offset int
-	Limit  int
-	Count  string
+	Offset int    `json:"offset" bson:"offset"`
+	Limit  int    `json:"limit" bson:"limit"`
+	Count  string `json:"count" bson:"count"`
 }
 
 // Result
 type Result struct {
-	Data      interface{}
-	Paging    Paging
-	APIStatus APIStatus
+	Data      interface{} `json:"data" bson:"data"`
+	Paging    Paging      `json:"paging" bson:"paging"`
+	APIStatus APIStatus   `json:"apistatus" bson:"apistatus"`
 }
